--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Odin Recipes</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
-  <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-      <li><a href="./recipes/italian-chicken-marinade.html">Italian Chicken Marinade</a></li>
-    </ul>
-  </body>
+    <head>
+        <title>Odin Recipes</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+    </head>
+    <body>
+        <h1>Odin Recipes</h1>
+        <ul>
+            <li>
+                <a href="./recipes/italian-chicken-marinade.html"
+                    >Italian Chicken Marinade</a
+                >
+            </li>
+        </ul>
+    </body>
 </html>
