--- a/recipes/italian-chicken-marinade.html
+++ b/recipes/italian-chicken-marinade.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes | Italian Chicken Marinade</title>
-</head>
-<body>
-   <h1>Italian Chicken Marinade</h1> 
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Odin Recipes | Italian Chicken Marinade</title>
+    </head>
+    <body>
+        <h1>Italian Chicken Marinade</h1>
+        <img
+            src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F07%2F09%2F665982-italian-chicken-marinade-wannabe-chefette-4x3-1.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
+            alt="italian chicken marinade dish"
+            width="600px"
+        />
+        <h3>
+            This Italian dressing chicken marinade is a super simple but
+            delicious way to add flavor before grilling.
+        </h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex eveniet
+            ullam debitis harum totam minus aperiam porro soluta cum dolores?
+        </p>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+            accusamus a magnam molestiae voluptas minima aperiam dicta. Nisi
+            eligendi magni perferendis at assumenda eius accusantium, earum
+            repellendus ducimus. Eaque iusto mollitia error, accusantium odio
+            pariatur saepe suscipit temporibus natus dolores ea consequuntur,
+            nihil dolor fugit.
+        </p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 (16 ounce) bottle Italian-style salad dressing</li>
+            <li>1 teaspoon garlic powder</li>
+            <li>1 teaspoon salt</li>
+            <li>4 skinless, boneless chicken breast halves</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>
+                Whisk salad dressing, garlic powder, and salt together in a
+                shallow baking dish; add chicken breasts and turn to coat. Cover
+                the dish with plastic wrap and marinate in the refrigerator, 4
+                hours to overnight.
+            </li>
+            <li>
+                Preheat an outdoor grill for high heat and lightly oil the
+                grate.
+            </li>
+            <li>
+                Remove chicken from marinade and shake off excess; discard
+                remaining marinade.
+            </li>
+            <li>
+                Cook chicken on the preheated grill until no longer pink in the
+                center and the juices run clear, about 7 to 8 minutes on each
+                side. An instant-read thermometer inserted into the center
+                should read at least 165 degrees F (74 degrees C).
+            </li>
+        </ol>
+    </body>
 </html>
